Добавлена ссылка на добавление в базовый шаблон

--- a/exem_6/guest_book/templates/base.html
+++ b/exem_6/guest_book/templates/base.html
@@ -14,7 +14,7 @@
         <nav class="main-nav">
             <ul>
                 {% block menu %}{% endblock menu%}
-{#                {% include "menu_element.html" with url_name="review-add" title="Добавить отзыв" %}#}
+                {% include "menu_element.html" with url_name="add_review" title="Добавить отзыв" %}
             </ul>
         </nav>
     </div>
