Добавлен шаблон детального просмотра отзыва

--- a/exem_6/guest_book/templates/index.html
+++ b/exem_6/guest_book/templates/index.html
@@ -11,6 +11,7 @@
         <ul>
             {% for list in guest_book %}
             <li>
+                <a href="{% url "review-view" list.id %}">
                     <div>{{ list.author }} ({{ list.email }})</div>
                     <div>{{ list.text }}</div>
                 </a>
