--- a/exem_6/guest_book/templates/review-view.html
+++ b/exem_6/guest_book/templates/review-view.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block menu %}
     <li><a href="{% url "review-update" review.id %}">Редактировать отзыв</a></li>
+    <li><a href="{% url "review-delete" review.id %}">Удалить отзыв</a></li>
 {% endblock menu%}
 
 {% block title %}Отзыва{% endblock title %}
