--- a/exem_6/guest_book/templates/add_review.html
+++ b/exem_6/guest_book/templates/add_review.html
@@ -6,7 +6,7 @@
 
     <form class="decor" action="{% url "add_review" %}" method="post">
         {% csrf_token %}
-            <h3>Создайте новую задачу</h3>
+            <h3>Добавить отзыв</h3>
         {% include 'review_form.html' with button_text="Добавить" %}
     </form>
 
