--- a/exem_6/guest_book/templates/review-update.html
+++ b/exem_6/guest_book/templates/review-update.html
@@ -7,7 +7,7 @@
 {% block content %}
 
     <form class="decor" action="{% url "review-update" review.id %}" method="post">
-        <h3>Изменение задачи</h3>
+        <h3>Изменение отзыва</h3>
         {% include 'review_form.html' with button_text="Изменить" %}
     </form>
 
