--- a/exem_6/guest_book/templates/review_form.html
+++ b/exem_6/guest_book/templates/review_form.html
@@ -11,4 +11,4 @@
    <p {% if field.errors %} class="form-field-error"{% endif %}>{{ field }}</p>
     <br>
 {% endfor %}
-<p><input type="submit" value="{{ button_text }}"></p>
+<p><input class="btn btn-primary" role="button" type="submit" value="{{ button_text }}"></p>
