--- a/exem_6/guest_book/templates/index.html
+++ b/exem_6/guest_book/templates/index.html
@@ -7,17 +7,20 @@
 {% if not guest_book %}
     <h2>ОТЗЫВОВ НЕТ</h2>
 {% endif %}
-    <div class="link">
-        <ul>
-            {% for list in guest_book %}
-            <li>
-                <a href="{% url "review-view" list.id %}">
-                    <div>{{ list.author }} ({{ list.email }})</div>
-                    <div>{{ list.text }}</div>
-                </a>
-            </li>
-            <hr>
+    <div class="main-block">
+        {% for list in guest_book %}
+            <div class="review">
+                <div class="ico-edit">
+                    <a href="{% url "review-update" list.id %}"><i class="far fa-edit fa-lg"></i>
+                    </a>
+                </div>
+                <div class="ico-delete">
+                    <a href="{% url "review-delete" list.id %}"><i class="far fa-trash-alt fa-lg"></i>
+                    </a>
+                </div>
+                <div class="box-header">{{ list.author }} ({{ list.email }})</div>
+                <div>{{ list.text }}</div>
+            </div>
         {% endfor %}
-        </ul>
     </div>
 {% endblock content %}
